--- a/skin/frontend/oc-theme/default/css/iwd/opc/opc.css
+++ b/skin/frontend/oc-theme/default/css/iwd/opc/opc.css
@@ -164,7 +164,8 @@ a.restore-account{font-size: 17px;text-decoration: underline;display: block;marg
 .opc-wrapper-opc .payment-block dt{margin: 0px 0 13px;background:none!important;position:relative;border-radius:2px;text-align: center;}
 .opc-wrapper-opc .payment-block dt:hover,
 .opc-wrapper-opc .payment-block dt.active{background:none!important;}
-.opc-wrapper-opc .payment-block dt label{cursor: pointer;display: block;f    font-size: 17px;color: #5a5a5a;;max-width: 100%;text-align: right;text-transform: uppercase;padding: 0 !important;}
+.opc-wrapper-opc .payment-block dt label{cursor: pointer;display: block;font-size: 17px;color: #5a5a5a;;max-width: 100%;text-align: right;text-transform: uppercase;padding: 0 !important;}
+.opc-wrapper-opc .payment-block dt#dt_method_paypal_express label{font-size:0;}
 .opc-wrapper-opc .payment-block select{border: 1px solid #d8d8d8;margin-top: 0;-moz-box-sizing: content-box;-webkit-box-sizing: content-box;box-sizing: content-box;height:22px;width:99%}
 .opc-wrapper-opc .payment-block dt input{display:block;margin: 2px 0 0 7px!important;cursor: pointer;}
 .opc-wrapper-opc .payment-block h3{margin-bottom:26px;}
