--- a/skin/frontend/oc-theme/default/css/styles-ltr.css
+++ b/skin/frontend/oc-theme/default/css/styles-ltr.css
@@ -6,8 +6,10 @@ input[type="checkbox"], input[type="radio"]{float: left;}
 html,body, button, input, select, table, textarea,h1,.h1,h2,.h2,h3,.h3,h4,.h4,.nav-primary a,#search,.skip-cart .count,.header-minicart .block-subtitle,.cart-menu .subtotal,.footer,  .footer button {font-family: "Ubuntu", sans-serif;}
 .left {float: right;}
 .right {float: left;}
-.sidebar{padding-right: 35px;padding-left: 0;float: left;}
+.sidebar{padding-right: 35px;float: left;}
 .home-section .sub-cat a i{left: auto;right: 0;}
+.main-404 .data-404:before{right: auto;    left: -80px;}
+.footer-right ul{margin-left: 0;MARGIN-RIGHT: 80PX;}
 .toolbar-sort label i{right: 15px;left: auto;}
 .block-layered-nav dt:after{left: auto;right:5px;}
 .block-layered-nav .title i {margin-right: 0;margin-left: 10px;}
@@ -52,7 +54,7 @@ html,body, button, input, select, table, textarea,h1,.h1,h2,.h2,h3,.h3,h4,.h4,.n
 .page-header-container .phone{background-position: 160px -2px;text-align: right;padding-right: 40px;}
 .header-minicart:after{right: -1px;left:auto;}
 .skip-cart .count{left: 5px;right: auto;}
-.account-link{    margin-right: 0;margin-left: 0;}
+.account-link{    margin-right: 0;margin-left: 20px;}
 div.phone-top a{margin-right: 0;margin-left: 10px;}
 .nav-search-desk form{left: auto;right: 0;}
 .nav-search-desk #search_mini_form .search-button{right: 10px;left: auto;}
@@ -65,7 +67,7 @@ div.phone-top a{padding-bottom: 10px;}
 .home-search .home-form{right: 0;}
 .advanced-search{float: left;}
 .home-form .buttons-set{margin-left: 20px;margin-right: 0;float: left;}
-.footer-bottom .credits img{float: right;}
+.footer-bottom .credits img{margin-right: 0;margin-left: 10px;}
 .home-product{padding-right: 8px;padding-left: 15px;}
 .home-search{padding-left: 8px;padding-right: 15px;}
 .footer .f-column h3{text-align: left;}
@@ -110,6 +112,8 @@ div.phone-top a{padding-bottom: 10px;}
     right: -30px;
     left: auto;
 }
+.col2-set .col-2, .col2-set .col-1{    float: left;}
+.account-login{width: 1050px;max-width: 100%;}
 .account-login .col2-set .new-users h2, .account-login .col2-set .registered-users h2 {
     direction: ltr;
 }
@@ -124,10 +128,12 @@ div.phone-top a{padding-bottom: 10px;}
 .col2-right-layout .col-main.cms-main{padding-right: 80px;padding-left: 50px;}
 .block-layered-nav dd li input[type="checkbox"]{margin: 6px 5px 0 0;}
 .cat-top .category-description{    text-align: left;}
-.pages ol li,.pages ol{float: left;}
+.mobile-nav.block-layered-nav .block-subtitle span:after{left: auto;right: 15px;}
 .pager li:first-child a, .pager li.current:first-child {border-right: none;}
 .pager li:last-child a, .pager li.current:last-child {border-right: 1px solid #d5d5d5;}
-.col-main .contacts img{right: -20px;left: auto;}
+.col-main .contacts img{right:0;left: auto;}
+.contact-us-block-content li{background-position: 0 0!important;padding-left: 30px;padding-right: 0;}
+.contacts .fieldset .field:last-child{float: right;}
 .contacts .openH{margin-left: 50px;margin-right: 0;}
 .col-main .contacts img{max-width: 590px;}
 .static_menu li span{background-image: url(../images/menu-arrow-en.png);left:auto;right: -13px;}
@@ -162,6 +168,15 @@ div.phone-top a{padding-bottom: 10px;}
 .right-top{text-align: left;}
 .right-top span {margin-left: 0;margin-right: 30px;}
 .header-right{    float: right!important;text-align: right;}
+.contacts .form-block{    float: left;}
+.contact-us-block{padding-right: 0;    padding-left: 130px;}
+.customer-account-create .account-login .registered-users .form-list {
+    float: left;
+    margin-left: 0;
+    margin-right: 30px;
+}
+.blog-home .tabs-headers li{    width: 150px;}
+.footer-bottom .credits {text-align: right;}
 @media (max-width: 1440px){
 	.topSearch{padding-right: 10px;}
 	.nav-primary a.level0{padding: 0 8px 10px;}
@@ -209,7 +224,7 @@ div.phone-top a{padding-bottom: 10px;}
 	.account-cart-wrapper {margin-top: 15px;padding-right: 0;padding-left: 5px;}
 	.skip-search .icon{width: 35px;height: 36px;}
 	.skip-cart .count{left: 0;}
-	.account-login .col2-set .registered-users {padding-left: 15px;padding-right: 0;float: none;width: 100%;}
+	.account-login .col2-set .registered-users {padding-left: 0;padding-right: 0;float: none;width: 100%;}
 	.account-login .col2-set .new-users {padding-right: 0;padding-left: 15px;}
 	.more-images{padding-right: 15px;padding-left: 0;}
 	.product-tabs li ,.product-tabs li#product_tabs_shipping_details{width: 100%;margin-bottom: 10px;}
@@ -222,10 +237,12 @@ div.phone-top a{padding-bottom: 10px;}
 	.how-works .item.third:after {right: auto;left: 0px;}
 	.how-works .text .subTitle{font-size: 14px;}
 	.how-works .item.fours:after {left: -18px;right: auto;display: block;}
+	.footer-right ul{MARGIN-RIGHT: 10px;}
+	.nav-primary a.level0{padding: 10px 0 10px;}
 }
 	#header-cart.skip-active{left: 0;right:auto;}
 	#header-account.skip-active{left: 0;right:auto;}
-	.nav-primary li.level0 ul  li{float: left;}
+	.nav-primary li.level0 ul  li{float: left;}	
 
 /*bootstrap*/
 @media (min-width: 992px){
